[package]
name = "rowdy-diesel"
version = "0.0.8"
authors = ["Yong Wen Chua <me@yongwen.xyz>"]

[lib]
name = "rowdy_diesel"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[features]
default = []

# Support MySQL
mysql = ["diesel/mysql", "diesel_codegen/mysql"]

# Support Sqlite
sqlite = ["diesel/sqlite", "diesel_codegen/sqlite"]

# Support Postgres
postgres = ["diesel/postgres", "diesel_codegen/postgres"]

[dependencies]
diesel = "1.1.1"
diesel_codegen = "*"
log = "0.3"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
ring = "0.11"
rocket = "0.3.2"
rowdy = { path = "../" }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

[package.metadata.docs.rs]
all-features = true
